[gd_scene load_steps=5 format=2]

[ext_resource path="res://Playground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Palette.tscn" type="PackedScene" id=2]
[ext_resource path="res://LevelArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="Palette" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 560 )
_sticky = false

[node name="Playground" parent="." instance=ExtResource( 1 )]
position = Vector2( 256, 0 )

[node name="LevelArea" parent="." instance=ExtResource( 3 )]
position = Vector2( 288, 96 )

[connection signal="game_over" from="." to="." method="_on_Game_game_over"]
